--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nuqs": "^2.0.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
