--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-spinners": "^0.14.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
