feat: 명언페이지에서 스크롤시, 명언 추가 기능 구현

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,13 @@
     "next/typescript",
     "plugin:tailwindcss/recommended",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
